refactor: update User and Role models to use enum, refactor RoleDto and CustomMapper accordingly