@@ -3,6 +3,7 @@ package com.hildi.propm.util.mapper;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -21,11 +22,11 @@ public class CustomMapper {
     }
 
     public <S, T> List<T> map(List<S> sourceList, Class<T> targetClass) {
-        return sourceList.stream().map(source -> map(source, targetClass)).collect(Collectors.toList());
+        return sourceList.stream().map(source -> map(source, targetClass)).toList();
     }
 
-    public <S, T> Set<T> map(Set<S> sourceSet, Class<T> targetClass) {
-        return sourceSet.stream().map(source -> map(source, targetClass)).collect(Collectors.toSet());
+    public <S, T> HashSet<T> map(HashSet<S> sourceSet, Class<T> targetClass) {
+        return sourceSet.stream().map(source -> map(source, targetClass)).collect(Collectors.toCollection(HashSet::new));
     }
 
 }
